--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "next": "15.3.4",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.31.7",
