--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@telegram-auth/react": "^1.0.4",
+    "@telegram-auth/server": "^1.0.4",
     "classnames": "^2.5.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "viem": "^2.31.7",
     "wagmi": "^2.15.6"
   },
