--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@telegram-auth/react": "^1.0.4",
     "@telegram-auth/server": "^1.0.4",
+    "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "ethers": "^6.15.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "pino": "^9.7.0",
